feat: use text instead of numbers for test data
[#OCD-2697]