@@ -253,8 +253,8 @@ public class TestParticipant implements Serializable {
     public void setProfessionalExperienceMonths(final String value) {
         if (!StringUtils.isEmpty(value)) {
             try {
-                professionalExperienceMonths = Math.round(new Float(value));
-            } catch (final NumberFormatException e) {
+                professionalExperienceMonths = Integer.valueOf(value);
+            } catch (final Exception e) {
                 LOGGER.error("can't parse " + value + " as a float or integer.");
             }
         }
@@ -267,8 +267,8 @@ public class TestParticipant implements Serializable {
     public void setComputerExperienceMonths(final String value) {
         if (!StringUtils.isEmpty(value)) {
             try {
-                computerExperienceMonths = Math.round(new Float(value));
-            } catch (final NumberFormatException e) {
+                computerExperienceMonths = Integer.valueOf(value);
+            } catch (final Exception e) {
                 LOGGER.error("can't parse " + value + " as a float or integer.");
             }
         }
@@ -281,8 +281,8 @@ public class TestParticipant implements Serializable {
     public void setProductExperienceMonths(final String value) {
         if (!StringUtils.isEmpty(value)) {
             try {
-                productExperienceMonths = Math.round(new Float(value));
-            } catch (final NumberFormatException e) {
+                productExperienceMonths = Integer.valueOf(value);
+            } catch (final Exception e) {
                 LOGGER.error("can't parse " + value + " as a float or integer.");
             }
         }
